Feature/reports generation
* Update the codebase for report generation

* Update the trust report to make it more intuitive

* Fix targeted mypy strict checks and remove --ignore-missing-imports for worker build
